--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^17.0.8",
     "@angular/animations": "~13.0.0",
     "@angular/cdk": "^13.0.2",
     "@angular/common": "~13.0.0",
@@ -26,7 +27,6 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.3",
     "@angular/cli": "~13.0.3",
     "@angular/compiler-cli": "~13.0.0",
     "@types/jasmine": "~3.10.0",
