feat: api and db init

--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prisma:m": "npx prisma migrate dev",
+    "prisma:m-c": "npx prisma migrate dev --create-only",
+    "prisma:g": "npx prisma generate",
+    "prisma:r": "npx prisma migrate reset",
+    "prisma:i": "npx prisma introspect",
+    "prisma:deploy": "npx prisma migrate deploy"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@prisma/client": "^5.7.1",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.6",
+    "prisma": "^5.7.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
